--- a/inbex.html
+++ b/inbex.html
@@ -89,6 +89,7 @@
                 <h1 class="section-title text-main">Contact</h1>
                 <p class="footer-info text-main text-md">N 433 Immeuble 3 Rue  a Zouhor, Beni Mellal</p>
                 <p class="footer-info text-main text-md">contact@viatours.com</p>
+                <p>test</p>
             </div>
         </div>
     </footer>
