--- a/inbex.html
+++ b/inbex.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </section>
-    
+    <p>this is testing</p>
     <footer class="footer">
         <div class="container">
             <div class="footer-wrapper">
