--- a/inbex.html
+++ b/inbex.html
@@ -94,6 +94,8 @@
         </div>
     </footer>
 
+    <p>Lorem ipsum dolor sit amet.</p>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
