--- a/inbex.html
+++ b/inbex.html
@@ -95,6 +95,9 @@
     </footer>
 
     <p>Lorem ipsum dolor sit amet.</p>
+    <p>par 2</p>
+
+    <p>par 3</p>
 
     <script src="./js/script.js"></script>
 </body>
