--- a/inbex.html
+++ b/inbex.html
@@ -95,7 +95,7 @@
     </footer>
 
     <p>Lorem ipsum dolor sit amet.</p>
-
+    <p>khgdhj</p>
     <script src="./js/script.js"></script>
 </body>
 </html>
