--- a/inbex.html
+++ b/inbex.html
@@ -87,6 +87,7 @@
         <div class="container">
             <div class="footer-wrapper">
                 <h1 class="section-title text-main">Contact</h1>
+                <h1>new headingg</h1>
                 <p class="footer-info text-main text-md">N 433 Immeuble 3 Rue  a Zouhor, Beni Mellal</p>
                 <p class="footer-info text-main text-md">contact@viatours.com</p>
                 <p>test</p>
