update landing page and create layout css

--- a/inbex.html
+++ b/inbex.html
@@ -41,20 +41,20 @@
             <li class="nav-item"><a href="#" class="item-link">Cree un compte</a></li>
             <li class="nav-item"><a href="#" class="item-link btn-login">Se connectez</a></li>
         </ul>
+    </header>
 
-        <div class="hero-section">
-            <div class="container">
-                <div class="hero-wrapper">
-                    <div class="content-wrapper">
-                        <h1 class="hero-title text-main">Des souvenir de voyage Que vous noublier <span class="text-orange">jamais</span>.</h1>
-                        <p class="hero-description text-main">Des escapade local ou aventure lointains, trouvez ce qui vous rende heureux.n’import quand n’importe ou</p>
-                        <a href="#" class="main-link">explorer plus</a>
-                    </div>
-                    <img src="./images/image1.webp" alt="" class="hero-img">
+    <section class="hero-section">
+        <div class="container">
+            <div class="hero-wrapper">
+                <div class="content-wrapper">
+                    <h1 class="hero-title text-main">Des souvenir de voyage Que vous noublier <span class="text-orange">jamais</span>.</h1>
+                    <p class="hero-description text-main">Des escapade local ou aventure lointains, trouvez ce qui vous rende heureux.n’import quand n’importe ou</p>
+                    <a href="#" class="main-link">explorer plus</a>
                 </div>
+                <img src="./images/image1.webp" alt="voyage" class="hero-img">
             </div>
         </div>
-    </header>
+    </section>
 
     <section class="about">
         <div class="container">
@@ -88,18 +88,11 @@
         <div class="container">
             <div class="footer-wrapper">
                 <h1 class="section-title text-main">Contact</h1>
-                <h1>new headingg</h1>
                 <p class="footer-info text-main text-md">N 433 Immeuble 3 Rue  a Zouhor, Beni Mellal</p>
                 <p class="footer-info text-main text-md">contact@viatours.com</p>
-                <p>test</p>
             </div>
         </div>
     </footer>
-
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>par 2</p>
-
-    <p>par 3</p>
     
     <script src="./js/script.js"></script>
 </body>
