--- a/inbex.html
+++ b/inbex.html
@@ -17,11 +17,12 @@
             <div class="container">
                 <img src="./images/logo.webp" class="logo-container" alt="" srcset="">
                 <ul class="nav-items">
-                    <li class="nav-item"><a href="#" class="item-link">Destinations</a></li>
-                    <li class="nav-item"><a href="#" class="item-link">Activités</a></li>
-                    <li class="nav-item"><a href="#" class="item-link">Contact</a></li>
-                    <li class="nav-item"><a href="#" class="item-link">Cree un compte</a></li>
-                    <li class="nav-item"><a href="#" class="item-link btn-login">Se connectez</a></li>
+                    <li class="nav-item"><a href="inbex.html" class="item-link">Accueil</a></li>
+                    <li class="nav-item"><a href="activite.html" class="item-link">Activités</a></li>
+                    <li class="nav-item"><a href="destinations.html" class="item-link">Destinations</a></li>
+                    <li class="nav-item"><a href="contact.html" class="item-link">Contact</a></li>
+                    <li class="nav-item"><a href="register.html" class="item-link">Cree un compte</a></li>
+                    <li class="nav-item"><a href="login.html" class="item-link btn-login">Se connectez</a></li>
                 </ul>
                 <button class="mobile-menu-bars" id="menu-btn">
                     <i class="fa-solid fa-bars"></i>
@@ -35,11 +36,12 @@
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </li>
-            <li class="nav-item"><a href="#" class="item-link">Destinations</a></li>
-            <li class="nav-item"><a href="#" class="item-link">Activités</a></li>
-            <li class="nav-item"><a href="#" class="item-link">Contact</a></li>
-            <li class="nav-item"><a href="#" class="item-link">Cree un compte</a></li>
-            <li class="nav-item"><a href="#" class="item-link btn-login">Se connectez</a></li>
+            <li class="nav-item"><a href="inbex.html" class="item-link">Accueil</a></li>
+            <li class="nav-item"><a href="activite.html" class="item-link">Activités</a></li>
+            <li class="nav-item"><a href="destinations.html" class="item-link">Destinations</a></li>
+            <li class="nav-item"><a href="contact.html" class="item-link">Contact</a></li>
+            <li class="nav-item"><a href="register.html" class="item-link">Cree un compte</a></li>
+            <li class="nav-item"><a href="login.html" class="item-link btn-login">Se connectez</a></li>
         </ul>
     </header>
 
