add login and register layout

--- a/activite.html
+++ b/activite.html
@@ -49,7 +49,7 @@
         <h1 class="banner-heading">nos activite</h1>
     </section>
 
-    <section class="nos-destinations">
+    <section class="nos-activite">
 
     </section>
 
