--- a/contact.html
+++ b/contact.html
@@ -45,11 +45,19 @@
         </ul>
     </header>
 
-    <section class="banner destination-banner">
-        <h1 class="banner-heading">contact</h1>
+    <section class="banner-section">
+        <div class="container">
+            <div class="banner-wrapper banner-contact">
+                <h1 class="banner-title">contact</h1>
+                <div class="banner-overlay"></div>
+            </div>
+        </div>
     </section>
 
     <section class="contact-page">
+        <div class="container">
+            <div class="contact-wrapper">
+                
 
     </section>
 
