--- a/activite.html
+++ b/activite.html
@@ -45,8 +45,13 @@
         </ul>
     </header>
 
-    <section class="banner destination-banner">
-        <h1 class="banner-heading">nos activite</h1>
+    <section class="banner-section">
+        <div class="container">
+            <div class="banner-wrapper banner-activtes">
+                <h1 class="banner-title">nos activites</h1>
+                <div class="banner-overlay"></div>
+            </div>
+        </div>
     </section>
 
     <section class="nos-activite">
