--- a/activite.html
+++ b/activite.html
@@ -55,7 +55,39 @@
     </section>
 
     <section class="nos-activite">
-
+        <div class="container">
+            <div class="activities-cards">
+                <div class="activity-card">
+                    <div class="activity-card-description">
+                        <h2 class="activity-title text-main">hicking</h2>
+                        <p class="activity-text text-main">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui sed, excepturi accusantium quisquam illo delectus.</p>
+                        <a href="#" class="btn-md">explorer plus</a>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <div class="activity-card-description">
+                        <h2 class="activity-title text-main">hicking</h2>
+                        <p class="activity-text text-main">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui sed, excepturi accusantium quisquam illo delectus.</p>
+                        <a href="#" class="btn-md">explorer plus</a>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <div class="activity-card-description">
+                        <h2 class="activity-title text-main">hicking</h2>
+                        <p class="activity-text text-main">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui sed, excepturi accusantium quisquam illo delectus.</p>
+                        <a href="#" class="btn-md">explorer plus</a>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <div class="activity-card-description">
+                        <h2 class="activity-title text-main">hicking</h2>
+                        <p class="activity-text text-main">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui sed, excepturi accusantium quisquam illo delectus.</p>
+                        <a href="#" class="btn-md">explorer plus</a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
