--- a/destinations.html
+++ b/destinations.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/30a7946fd8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/destination.css">
     <title>Viatours | Page Accueil </title>
 </head>
+
 <body>
     <header class="header">
         <nav class="nav-bar">
@@ -55,19 +59,145 @@
     </section>
 
     <section class="nos-destinations">
+        <div class="container">
+            <div class="destination-cards">
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
 
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
+
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
+
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
+
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
+
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
+
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
+
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+                <div class="destination-card">
+                    <div class="card-image-wraper">
+                        <img src="./images/bali.jpg" alt="" class="card-image">
+                    </div>
+
+                    <div class="card-description">
+                        <h2 class="card-title text-main">  bali </h2>
+                        <p class="card-texte text-main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae in nesciunt expedita debitis dicta.</p>
+                    </div>
+
+                    <div class="card-pricing">
+                        <div class="price">1000,00 DH</div>
+                        <button class="btn-md">reserver</button>
+                    </div>
+                </div>
+            </div>
+            
+
+        </div>
     </section>
 
     <footer class="footer">
         <div class="container">
             <div class="footer-wrapper">
                 <h1 class="section-title text-main">Contact</h1>
-                <p class="footer-info text-main text-md">N 433 Immeuble 3 Rue  a Zouhor, Beni Mellal</p>
+                <p class="footer-info text-main text-md">N 433 Immeuble 3 Rue a Zouhor, Beni Mellal</p>
                 <p class="footer-info text-main text-md">contact@viatours.com</p>
             </div>
         </div>
     </footer>
-    
+
     <script src="./js/script.js"></script>
 </body>
+
 </html>
