finish contact section

--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,53 @@
         </div>
     </section>
 
-    <section class="contact-page">
+    <section class="contact-section">
         <div class="container">
             <div class="contact-wrapper">
-                
+                <div class="contact-info">
+                    <div class="info-details text-main">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <p class="info-detail">N 433 Immeuble 3 Rue  a Zouhor, Beni Mellal</p>
+                    </div>
+                    <div class="info-details text-main">
+                        <i class="fa-solid fa-phone-volume"></i>
+                        <p class="info-detail">0567453498</p>
+                    </div>
+                    <div class="info-details text-main">
+                        <i class="fa-solid fa-envelope"></i>
+                        <p class="info-detail">contact@viatours.com</p>
+                    </div>
+                    <div class="social-media ">
+                        <a href="#" class="social-media-link text-main">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#" class="social-media-link text-main">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#" class="social-media-link text-main">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </div>
+                </div>
 
+                <div class="contact-form">
+                    <form class="form">
+                        <div class="form-group">
+                            <input type="text" class="form-input" placeholder="Your name">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-input" placeholder="Your email">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-input message" placeholder="Message"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn-form btn-message">send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>    
     </section>
 
     <footer class="footer">
