finish section map

--- a/contact.html
+++ b/contact.html
@@ -103,6 +103,12 @@
         </div>    
     </section>
 
+    <div class="map-section">
+        <div class="container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8979.124791550157!2d-6.880252932069956!3d33.956251218792985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7132b7118bfbd%3A0x2f9cad14202306ec!2sHay%20Riad%2C%20Rabat!5e0!3m2!1sen!2sma!4v1736507169966!5m2!1sen!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-wrapper">
