finish login page

--- a/register.html
+++ b/register.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/30a7946fd8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/register-login.css">
     <title>Viatours | Page Accueil </title>
 </head>
+
 <body>
     <header class="header">
         <nav class="nav-bar">
@@ -46,20 +50,35 @@
     </header>
 
 
-    <section class="user-form">
-        <h1>register</h1>
-    </section>
+    <form action="">
+        <section class="user-form">
 
+            <h1 class="inputbox">Registre</h1>
+            <input type="text" name="" id="" placeholder="Enter Username" required="required"><br>
+            <input type="email" name="" id="" placeholder="Enter email" required="required"><br>
+            <input type="password" name="" id="" placeholder="Enter password" required="required"><br>
+            <input type="password" name="" id="" placeholder="Confirm password" required="required"><br>
+            <input type="submit" value="registre"> <br>
+            <div class="remembre">
+                <p>You already have an account ?</p>
+                <div class="link">
+                    <a href="login.html">login here</a><br>
+                </div>
+            </div>
+
+        </section>
+    </form>
     <footer class="footer">
         <div class="container">
             <div class="footer-wrapper">
                 <h1 class="section-title text-main">Contact</h1>
-                <p class="footer-info text-main text-md">N 433 Immeuble 3 Rue  a Zouhor, Beni Mellal</p>
+                <p class="footer-info text-main text-md">N 433 Immeuble 3 Rue a Zouhor, Beni Mellal</p>
                 <p class="footer-info text-main text-md">contact@viatours.com</p>
             </div>
         </div>
     </footer>
-    
+
     <script src="./js/script.js"></script>
 </body>
+
 </html>
