finish register page

--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
                             <p class="remeber-text mr-left-none"> Don't have an account?</p>
                         </div>
                         <div class="remeber-me">
-                            <a href="#" class="remeber-link "> Create account</a>
+                            <a href="register.html" class="remeber-link "> Create account</a>
                         </div>
                     </div>
                 </form>
