--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
         <ul class="nav-items-mobile" id="menu-list">
             <li class="nav-item close">
-                <button class="close" id="close-list">
+                <button class="close" id="close-list" title="menu button">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </li>
