--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a href="register.html" class="item-link">Cree un compte</a></li>
                     <li class="nav-item"><a href="login.html" class="item-link btn-login">Se connectez</a></li>
                 </ul>
-                <button class="mobile-menu-bars" id="menu-btn">
+                <button class="mobile-menu-bars" id="menu-btn" title="menu button">
                     <i class="fa-solid fa-bars"></i>
                 </button>
             </div>
