fix accessibility issues

--- a/activite.html
+++ b/activite.html
@@ -24,16 +24,16 @@
                     <li class="nav-item"><a href="register.html" class="item-link">Cree un compte</a></li>
                     <li class="nav-item"><a href="login.html" class="item-link btn-login">Se connectez</a></li>
                 </ul>
-                <button class="mobile-menu-bars" id="menu-btn">
-                    <i class="fa-solid fa-bars"></i>
+                <button class="mobile-menu-bars" id="menu-btn" aria-label="Open menu">
+                    <i class="fa-solid fa-bars" aria-hidden="true"></i>
                 </button>
             </div>
         </nav>
 
         <ul class="nav-items-mobile" id="menu-list">
             <li class="nav-item close">
-                <button class="close" id="close-list" title="menu button">
-                    <i class="fa-solid fa-xmark"></i>
+                <button class="close" id="close-list" aria-label="Close menu">
+                    <i class="fa-solid fa-xmark" aria-hidden="true"></i>
                 </button>
             </li>
             <li class="nav-item"><a href="inbex.html" class="item-link">Accueil</a></li>
