--- a/inbex.html
+++ b/inbex.html
@@ -25,8 +25,8 @@
                     <li class="nav-item"><a href="register.html" class="item-link">Cree un compte</a></li>
                     <li class="nav-item"><a href="login.html" class="item-link btn-login">Se connectez</a></li>
                 </ul>
-                <button class="close" id="close-list" aria-label="Open menu">
-                    <i class="fa-solid fa-xmark" aria-hidden="true"></i>
+                <button class="mobile-menu-bars" id="menu-btn" aria-label="Open menu">
+                    <i class="fa-solid fa-bars" aria-hidden="true"></i>
                 </button>
             </div>
         </nav>
