finish validation for index and activite pages

--- a/inbex.html
+++ b/inbex.html
@@ -16,7 +16,7 @@
     <header class="header">
         <nav class="nav-bar">
             <div class="container">
-                <img src="./images/logo.webp" class="logo-container" alt="" srcset="">
+                <img src="./images/logo.webp" class="logo-container" alt="viatours logo">
                 <ul class="nav-items">
                     <li class="nav-item"><a href="inbex.html" class="item-link">Accueil</a></li>
                     <li class="nav-item"><a href="activite.html" class="item-link">Activités</a></li>
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="hero-wrapper">
                     <div class="content-wrapper">
-                        <h1 class="hero-title text-main">Des souvenir de voyage Que vous noublier <span class="text-orange">jamais</span>.</h1>
+                        <h2 class="hero-title text-main">Des souvenir de voyage Que vous noublier <span class="text-orange">jamais</span>.</h2>
                         <p class="hero-description text-main">Des escapade local ou aventure lointains, trouvez ce qui vous rende heureux.n’import quand n’importe ou</p>
                         <a href="#" class="main-link">explorer plus</a>
                     </div>
@@ -62,7 +62,7 @@
     
         <section class="about">
             <div class="container">
-                <h1 class="section-title text-main">Pour quoi nous ?</h1>
+                <h2 class="section-title text-main">Pour quoi nous ?</h2>
                 <div class="cards-wrapper">
                     <div class="card">
                         <img class="card-icon" src="/images/ticket.svg.webp" alt="">
