finish html validation for destination page

--- a/destinations.html
+++ b/destinations.html
@@ -19,7 +19,7 @@
     <header class="header">
         <nav class="nav-bar">
             <div class="container">
-                <img src="./images/logo.webp" class="logo-container" alt="" srcset="">
+                <img src="./images/logo.webp" class="logo-container" alt="viatours logo">
                 <ul class="nav-items">
                     <li class="nav-item"><a href="inbex.html" class="item-link">Accueil</a></li>
                     <li class="nav-item"><a href="activite.html" class="item-link">Activités</a></li>
@@ -53,7 +53,7 @@
         <section class="banner-section">
             <div class="container">
                 <div class="banner-wrapper banner-destinations">
-                    <h1 class="banner-title">nos destination</h1>
+                    <h2 class="banner-title">nos destination</h2>
                     <div class="banner-overlay"></div>
                 </div>
             </div>
