finish html validation on login page

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <header class="header">
         <nav class="nav-bar">
             <div class="container">
-                <img src="./images/logo.webp" class="logo-container" alt="" srcset="">
+                <img src="./images/logo.webp" class="logo-container" alt="viatours logo">
                 <ul class="nav-items">
                     <li class="nav-item"><a href="inbex.html" class="item-link">Accueil</a></li>
                     <li class="nav-item"><a href="activite.html" class="item-link">Activités</a></li>
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="form-wrapper">
                     <form class="form">
-                        <h1 class="section-title text-main">Login</h1>
+                        <h2 class="section-title text-main">Login</h2>
             
                         <div class="input-group">
                             <input type="email" class="input-form" placeholder="Enter email" >
