--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <header class="header">
         <nav class="nav-bar">
             <div class="container">
-                <img src="./images/logo.webp" class="logo-container" alt="" srcset="">
+                <img src="./images/logo.webp" class="logo-container" alt="viatours logo" >
                 <ul class="nav-items">
                     <li class="nav-item"><a href="inbex.html" class="item-link">Accueil</a></li>
                     <li class="nav-item"><a href="activite.html" class="item-link">Activités</a></li>
@@ -49,7 +49,7 @@
         <section class="banner-section">
             <div class="container">
                 <div class="banner-wrapper banner-contact">
-                    <h1 class="banner-title">contact</h1>
+                    <h2 class="banner-title">contact</h2>
                     <div class="banner-overlay"></div>
                 </div>
             </div>
@@ -57,6 +57,7 @@
     
         <section class="contact-section">
             <div class="container">
+                <h2 class="text-main section-title" >Trouvez-nous sur :</h2>
                 <div class="contact-wrapper">
                     <div class="contact-info">
                         <div class="info-details text-main">
@@ -115,7 +116,7 @@
                     loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade"
                     title="Google Map showing the location of Hay Riad, Rabat" 
-                    aria-label="Google Map showing the location of Hay Riad, Rabat">
+                    aria-label="Google Map showing the location of Hay Riad, Rabat"
                 ></iframe>
             </div>
         </div>
